--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
 }
 
 .add {
-    width: 200px;
+    width: 100%;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
     color: rgba(0,0,0,0.87);
     background-color: rgb(250,250,250);
@@ -63,7 +63,6 @@
     -ms-flex-align: center;
     align-items: center;
     padding: 0 6px;
-    margin: 6px 8px;
     line-height: 36px;
     min-height: 36px;
     background: 0 0;
